--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,9 @@
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
     "    elif restaurant['rating'] < alternative['rating']:\n",
-    "        return False"
+    "        return False\n",
+    "    else:\n",
+    "        "
    ]
   },
   {
