--- a/index.ipynb
+++ b/index.ipynb
@@ -411,7 +411,7 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    if len(restaurant['price']) > len(alternative['rating']:\n",
+    "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return True\n",
     "    elif restaurant['rating'] < alternative['rating']:\n",
     "        return False\n",
