--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,7 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return True\n",
-    "    elif restaurant['rating'] < alternative['rating']:\n",
+    "    elif len(restaurant['price']) > len(alternative['price']):\n",
     "        return False\n",
     "    else:\n",
     "        return False"
