--- a/index.ipynb
+++ b/index.ipynb
@@ -406,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        return True\n",
-    "    elif len(restaurant['price']) > len(alternative['price']):\n",
+    "    elif len(restaurant['price']) < len(alternative['price']):\n",
     "        return False\n",
     "    else:\n",
     "        return False"
@@ -421,9 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_cheaper(fork_fig, frontier_restaurant) # False"
    ]
