Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,9 +461,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_cheaper(fork_fig, fork_fig) # False"
    ]
@@ -482,7 +493,12 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    pass"
+    "   if restaurant['rating'] > alternative['rating']:\n",
+    "        return True\n",
+    "    elif restaurant['rating'] < alternative['rating']:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
