--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    if restaurant['rating'] > r:\n",
+    "    if restaurant['rating'] > rating:\n",
     "        return True\n",
     "    elif restaurant['rating'] < alternative['rating']:\n",
     "        return False\n",
