--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,7 @@
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
     "        return True\n",
-    "    elif restaurant['rating'] < alternative['rating']:\n",
+    "    elif restaurant['rating'] < rating:\n",
     "        return False\n",
     "    else:\n",
     "        return False"
